[package]
name = "rs-micro-iss"
version = "0.1.0"
authors = ["Donald Campbell <125581724+donaldcampbelljr@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "rs-micro-iss"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-hal = "0.44.1"
embedded-hal = "1.0.0"
embedded-svc = "0.28.0"
esp-idf-sys = "0.35.0"
heapless = "0.8.0"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde_json = { version = "1.0.114" }

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
